Fixes #11: add table spacing

--- a/ammarasmro/themes/creative/static/css/custom.css
+++ b/ammarasmro/themes/creative/static/css/custom.css
@@ -1,5 +1,10 @@
 /* your styles go here */
 
+table {
+    border-spacing: 10px!important;
+    border-collapse: separate!important;
+}
+
 .sidebar-content {
   height: 100%;
 }
